--- a/src/app/post/[slug]/PostHeader.module.scss
+++ b/src/app/post/[slug]/PostHeader.module.scss
@@ -7,13 +7,13 @@
 .title {
   color: #ffffff !important;
   border-bottom: 0 !important;
-  font-size: 2.6rem !important;
+  font-size: 3rem !important;
   font-weight: bold;
   margin-bottom: 8px;
 }
 
 .description {
-  font-size: 1.3rem;
+  font-size: 2rem;
   color: #b0b0b0;
   margin-bottom: 12px;
 }
@@ -21,7 +21,7 @@
 .meta {
   display: flex;
   gap: 10px;
-  font-size: 1rem;
+  font-size: 1.3rem;
   color: #aaaaaa;
   margin-bottom: 12px;
 }
@@ -37,7 +37,7 @@
   color: #4af6b6;
   padding: 3px 5px;
   border-radius: 8px;
-  font-size: 0.85rem;
+  font-size: 1rem;
 }
 
 ////////////////////////////////////////////////////////////////////////////////
@@ -45,21 +45,35 @@
 ////////////////////////////////////////////////////////////////////////////////
 @media screen and (max-width: 1024px) {
   .postHeader {
+    padding-bottom: 0.8rem;
+    border-bottom: 2px solid #cccccc;
+    margin-bottom: 2rem;
   }
 
   .title {
+    font-size: 2rem !important;
+    margin-bottom: 5px;
   }
 
   .description {
+    font-size: 1.3rem;
+    margin-bottom: 5px;
   }
 
   .meta {
+    gap: 8px;
+    font-size: 1rem;
+    margin-bottom: 5px;
   }
 
   .tags {
+    gap: 3px;
   }
 
   .tag {
+    padding: 3px 5px;
+    border-radius: 8px;
+    font-size: 0.7rem;
   }
 }
 
