--- a/src/components/CategoryView/CategoryView.module.scss
+++ b/src/components/CategoryView/CategoryView.module.scss
@@ -5,7 +5,7 @@
   max-width: 350px;
   flex-shrink: 0;
   background-color: #323232;
-  font-size: 1.05rem;
+  font-size: 1.15rem;
   overflow-y: auto;
   padding: 10px;
   color: #fff;
@@ -40,32 +40,26 @@
 .highlight {
   background-color: rgba(246, 246, 22, 0.93);
   color: black;
-  border-radius: 3px;
+  border-radius: 5px;
 }
 
 ////////////////////////////////////////////////////////////////////////////////
 // tablet
 ////////////////////////////////////////////////////////////////////////////////
 @media screen and (max-width: 1024px) {
+  /* 카테고리 영역 */
   .categoryView {
-  }
-
-  .categoryTree {
+    width: 20%;
+    min-width: 200px;
+    max-width: 300px;
+    font-size: 1rem;
+    padding: 5px;
   }
 
   .treeItem {
-
-    &:hover {
-    }
-  }
-
-  .folder {
-  }
-
-  .file {
-  }
-
-  .highlight {
+    cursor: pointer;
+    margin: 5px 0;
+    transition: color 0.2s;
   }
 }
 
@@ -83,9 +77,6 @@
     box-shadow: 2px 0 10px rgba(0, 0, 0, 0.3);
     transition: transform 0.3s ease-in-out;
     transform: translateX(-100%);
-
-    /* 내비게이션 & 로그 영역 제외 */
-    bottom: var(--log-height, 0px);
   }
 
   .categoryView.open {
