--- a/src/components/LogView/LogView.module.scss
+++ b/src/components/LogView/LogView.module.scss
@@ -6,7 +6,7 @@
   background-color: #444;
   position: fixed;
   bottom: 0;
-  left: 60px;
+  left: 80px;
   right: 0;
   transition: max-height 0.5s ease-in-out;
   border-top: 1px solid #000;
@@ -22,6 +22,7 @@
   z-index: 10;
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
+  margin-right: 1rem;
 
   .logView:hover & {
     opacity: 1;
@@ -44,6 +45,11 @@
 // tablet
 ////////////////////////////////////////////////////////////////////////////////
 @media screen and (max-width: 1024px) {
+  /* 로그 전체 영역 */
+  .logView {
+    height: 200px;
+    left: 60px;
+  }
 }
 
 ////////////////////////////////////////////////////////////////////////////////
@@ -57,9 +63,5 @@
 
   .logHeader {
     opacity: 1;
-  }
-
-  .closeButton {
-    font-size: 16px;
   }
 }
