--- a/src/components/TableOfContents/TableOfContents.module.scss
+++ b/src/components/TableOfContents/TableOfContents.module.scss
@@ -1,14 +1,14 @@
 .tocHeader {
   display: flex;
   align-items: center; /* 세로 중앙 정렬 */
-  gap: 6px; /* 아이콘과 텍스트 사이 간격 */
-  margin-bottom: 8px;
+  gap: 10px; /* 아이콘과 텍스트 사이 간격 */
+  margin-bottom: 10px;
   white-space: nowrap; /* 줄바꿈 방지 */
 }
 
 .tocText {
   font-weight: bold;
-  font-size: 13px;
+  font-size: 1.2rem;
   color: #CCCCCC;
 }
 
@@ -16,13 +16,13 @@
   position: fixed;
   top: 10px;
   right: 10px;
-  width: 350px;
+  width: 330px;
   z-index: 100;
-  opacity: 0;
+  opacity: 0.3;
   transition: opacity 0.5s ease-in-out;
 
   &:hover {
-    opacity: 1;
+    opacity: 0.85;
   }
 }
 
@@ -37,7 +37,8 @@
   backdrop-filter: blur(3px);
   color: #d4d4d4;
   font-size: 0.85rem;
-  height: 35vh;
+  min-height: 15vh;
+  max-height: 35vh;
   overflow-y: auto;
 }
 
@@ -85,89 +86,27 @@
 ////////////////////////////////////////////////////////////////////////////////
 @media screen and (max-width: 1024px) {
   .tocHeader {
+    gap: 8px; /* 아이콘과 텍스트 사이 간격 */
+    margin-bottom: 5px;
   }
 
   .tocText {
+    font-size: 1rem;
   }
 
   .tocWrapper {
-
-    &:hover {
-    }
-  }
-
-  .visible {
-  }
-
-  .tocBox {
-  }
-
-  .tocBox strong {
-  }
-
-  .tocBox ul {
-  }
-
-  .tocBox li {
-  }
-
-  .tocBox a {
-
-    &:hover {
-    }
-  }
-
-  .level1 {
-  }
-
-  .level2 {
-  }
-
-  .level3 {
-  }
-}
-
-////////////////////////////////////////////////////////////////////////////////
-// mobile
-////////////////////////////////////////////////////////////////////////////////
-@media screen and (max-width: 768px) {
-  .tocHeader {
-  }
-
-  .tocText {
-  }
-
-  .tocWrapper {
-    width: 200px;
-
-    &:hover {
-    }
-  }
-
-  .visible {
+    top: 5px;
+    right: 5px;
+    width: 270px;
+    opacity: 0.3;
   }
 
   .tocBox {
-    font-size: 0.65rem;
-    height: 20vh;
-  }
-
-  .tocBox strong {
-  }
-
-  .tocBox ul {
-  }
-
-  .tocBox li {
-  }
-
-  .tocBox a {
-
-    &:hover {
-    }
-  }
-
-  .level1 {
+    padding: 8px;
+    font-size: 0.75rem;
+    min-height: 13vh;
+    max-height: 28vh;
+    overflow-y: auto;
   }
 
   .level2 {
@@ -176,5 +115,32 @@
 
   .level3 {
     padding-left: 26px;
+  }
+}
+
+////////////////////////////////////////////////////////////////////////////////
+// mobile
+////////////////////////////////////////////////////////////////////////////////
+@media screen and (max-width: 768px) {
+  .tocWrapper {
+    top: 5px;
+    right: 5px;
+    width: 180px;
+    opacity: 0.75;
+  }
+
+  .tocBox {
+    font-size: 0.65rem;
+    padding: 6px;
+    min-height: 10vh;
+    max-height: 20vh;
+  }
+
+  .level2 {
+    padding-left: 10px;
+  }
+
+  .level3 {
+    padding-left: 20px;
   }
 }
