--- a/src/components/CategoryView/CategoryControl/CategoryControl.module.scss
+++ b/src/components/CategoryView/CategoryControl/CategoryControl.module.scss
@@ -135,5 +135,10 @@
       width: 100%;
       font-size: 12px;
     }
+
+    padding: 5px 5px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
   }
 }
