모바일 toc 높이 수정

--- a/src/components/TableOfContents/TableOfContents.module.scss
+++ b/src/components/TableOfContents/TableOfContents.module.scss
@@ -123,7 +123,7 @@
 ////////////////////////////////////////////////////////////////////////////////
 @media screen and (max-width: 768px) {
   .tocWrapper {
-    top: 5px;
+    top: 13vh;
     right: 5px;
     width: 180px;
     opacity: 0.75;
