모바일 버튼 높이 수정

--- a/src/components/ScrollToTop/ScrollToTop.module.scss
+++ b/src/components/ScrollToTop/ScrollToTop.module.scss
@@ -56,6 +56,7 @@
 ////////////////////////////////////////////////////////////////////////////////
 @media screen and (max-width: 768px) {
   .scrollToTop {
+    bottom: 44vh !important;
     width: 30px;
     height: 30px;
   }
