--- a/src/app/post/[slug]/page.module.scss
+++ b/src/app/post/[slug]/page.module.scss
@@ -13,22 +13,32 @@
 
 /* 제목 스타일 */
 .markdown h1 {
-  font-size: 1.6rem;
+  font-size: 2.3rem;
   font-weight: bold;
-  color: #e06c75;
+  color: rgba(231, 70, 81, 0.83);
   border-bottom: 3px solid #3a3f4b;
-  padding-bottom: 6px;
-  margin-bottom: 23px;
+  padding-top: 1rem;
+  padding-bottom: 1px;
+  margin-bottom: 1px;
 }
 
 .markdown h2 {
-  font-size: 1.1rem;
+  font-size: 1.8rem;
+  font-weight: bold;
+  color: rgba(13, 182, 163, 0.79);
+  border-bottom: 2px solid #3a3f4b;
+  padding-top: 1rem;
+  padding-bottom: 1px;
+  margin-bottom: 1px;
+}
+
+.markdown h3 {
+  font-size: 1.3rem;
   font-weight: bold;
   color: #d19a66;
-  border-bottom: 2px solid #3a3f4b;
-  padding-bottom: 5px;
-  margin-top: 15px;
-  margin-bottom: 5px;
+  padding-top: 1rem;
+  padding-bottom: 1px;
+  margin-bottom: 1px;
 }
 
 /* 목록 스타일 */
@@ -115,16 +125,12 @@
 
   /* 제목 스타일 */
   .markdown h1 {
-    border-bottom: 3px solid #3a3f4b;
-    padding-bottom: 3px;
-    margin-bottom: 3px;
   }
 
   .markdown h2 {
-    border-bottom: 2px solid #3a3f4b;
-    padding-bottom: 3px;
-    margin-top: 10px;
-    margin-bottom: 3px;
+  }
+
+  .markdown h3 {
   }
 
   /* 목록 스타일 */
@@ -159,10 +165,14 @@
   }
 
   .markdown h1 {
-    font-size: 1.3rem;
+    font-size: 1.8rem;
   }
 
   .markdown h2 {
+    font-size: 1.4rem;
+  }
+
+  .markdown h3 {
     font-size: 1rem;
   }
 
