--- a/src/components/TableOfContents/TableOfContents.module.scss
+++ b/src/components/TableOfContents/TableOfContents.module.scss
@@ -14,7 +14,7 @@
 
 .tocWrapper {
   position: fixed;
-  top: 10px;
+  top: 7vh;
   right: 10px;
   width: 330px;
   z-index: 100;
@@ -95,7 +95,7 @@
   }
 
   .tocWrapper {
-    top: 5px;
+    top: 5vh;
     right: 5px;
     width: 270px;
     opacity: 0.3;
