--- a/src/components/LogView/LogView.module.scss
+++ b/src/components/LogView/LogView.module.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   height: 250px;
+  max-height: 250px;
   background-color: #444;
   position: fixed;
   bottom: 0;
