검색할 때 확대되는 현상 개선

--- a/src/components/CategoryView/CategoryControl/CategoryControl.module.scss
+++ b/src/components/CategoryView/CategoryControl/CategoryControl.module.scss
@@ -45,6 +45,7 @@
   transition: all 0.3s ease;
   font-size: 16px;
   -webkit-text-size-adjust: 100%;
+  -webkit-tap-highlight-color: transparent;
 
   &.searchActive {
     width: 100%;
@@ -140,5 +141,8 @@
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
+    max-height: 30px;
+    touch-action: manipulation;
+    -webkit-tap-highlight-color: transparent;
   }
 }
