검색 기능 사용성 개선

--- a/src/components/CategoryView/CategoryControl/CategoryControl.module.scss
+++ b/src/components/CategoryView/CategoryControl/CategoryControl.module.scss
@@ -14,6 +14,11 @@
   .categoryControl:hover & {
     opacity: 1;
   }
+
+  /* 검색어가 입력된 상태에서는 항상 보이도록 설정 */
+  &.hasSearchQuery {
+    opacity: 1;
+  }
 }
 
 /* 아이콘 버튼 (돋보기, 폴더 열기/닫기 등) */
@@ -84,6 +89,11 @@
     opacity: 0;
 
     .categoryControl:hover & {
+      opacity: 1;
+    }
+
+    /* 검색어가 입력된 상태에서는 항상 보이도록 설정 */
+    &.hasSearchQuery {
       opacity: 1;
     }
   }
