--- a/src/components/CategoryView/CategoryView.module.scss
+++ b/src/components/CategoryView/CategoryView.module.scss
@@ -6,16 +6,34 @@
   flex-shrink: 0;
   background-color: #323232;
   font-size: 1.15rem;
-  overflow-y: auto;
-  padding: 10px;
   color: #fff;
   height: 100%;
   border-right: 1px solid #000;
+  display: flex;
+  flex-direction: column;
+}
+
+/* 카테고리 컨트롤 영역 */
+.categoryControl {
+  position: sticky;
+  top: 0;
+  background-color: #323232;
+  z-index: 2;
+  padding: 10px;
+  border-bottom: 1px solid #444;
+}
+
+/* 카테고리 트리 영역 */
+.treeContainer {
+  flex: 1;
+  overflow-y: auto;
+  padding: 10px;
 }
 
 .categoryTree {
   list-style: none;
   padding: 0;
+  margin: 0;
 }
 
 .treeItem {
@@ -53,13 +71,14 @@
     min-width: 200px;
     max-width: 300px;
     font-size: 1rem;
+  }
+
+  .categoryControl {
     padding: 5px;
   }
 
-  .treeItem {
-    cursor: pointer;
-    margin: 5px 0;
-    transition: color 0.2s;
+  .treeContainer {
+    padding: 5px;
   }
 }
 
@@ -81,7 +100,15 @@
   }
 
   .categoryView.open {
-    display: block;
+    display: flex;
+  }
+
+  .categoryControl {
+    padding: 5px;
+  }
+
+  .treeContainer {
+    padding: 5px;
   }
 
   /* 배경: 페이지만 가리고, 네비 & 로그 영역은 유지 */
