--- a/src/components/CategoryView/CategoryView.module.scss
+++ b/src/components/CategoryView/CategoryView.module.scss
@@ -87,16 +87,16 @@
 ////////////////////////////////////////////////////////////////////////////////
 @media screen and (max-width: 768px) {
   .categoryView {
-    display: none;
-    position: absolute;
-    top: 0;
+    position: fixed;
+    //top: var(--navigation-height, 50px);
     left: 35px;
     width: 60%;
     max-width: 300px;
-    height: 100%;
+    //height: calc(100% - var(--navigation-height, 50px));
     background-color: rgba(50, 50, 50, 0.95);
     z-index: 1000;
     box-shadow: 2px 0 10px rgba(0, 0, 0, 0.3);
+    //overflow: hidden;
   }
 
   .categoryView.open {
@@ -105,20 +105,24 @@
 
   .categoryControl {
     padding: 5px;
+    flex-shrink: 0;
   }
 
   .treeContainer {
     padding: 5px;
+    flex: 1;
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
   }
 
   /* 배경: 페이지만 가리고, 네비 & 로그 영역은 유지 */
   .backdrop {
     display: none;
-    position: absolute;
-    top: 0;
+    position: fixed;
+    top: var(--navigation-height, 50px);
     left: 0;
     width: 100%;
-    height: 100%;
+    height: calc(100% - var(--navigation-height, 50px));
     background: rgba(0, 0, 0, 0.5);
     z-index: 999;
   }
