--- a/src/components/LogView/LogContainer/LogContainer.module.scss
+++ b/src/components/LogView/LogContainer/LogContainer.module.scss
@@ -10,6 +10,28 @@
   height: 100%;
 }
 
+/* 로그 항목 */
+.logItem {
+  margin-bottom: 5px;
+  line-height: 1.4;
+}
+
+/* 타임스탬프 */
+.timestamp {
+  color: #888;
+}
+
+/* 파일 링크 */
+.fileLink {
+  color: #72ccee;
+  text-decoration: none;
+  cursor: pointer;
+  
+  &:hover {
+    text-decoration: underline;
+    color: #9cdcf3;
+  }
+}
 
 ////////////////////////////////////////////////////////////////////////////////
 // tablet
