--- a/src/components/LogView/LogView.module.scss
+++ b/src/components/LogView/LogView.module.scss
@@ -17,6 +17,7 @@
 .logHeader {
   display: flex;
   justify-content: flex-end;
+  align-items: center;
   background: #444;
   position: sticky;
   top: 0;
@@ -30,7 +31,8 @@
   }
 }
 
-/* 닫기 버튼 */
+/* 버튼 공통 스타일 */
+.clearButton,
 .closeButton {
   background: none;
   border: none;
@@ -40,6 +42,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
+  &:hover {
+    color: #ffffff;
+    
+    svg path {
+      fill: #ffffff;
+    }
+  }
 }
 
 ////////////////////////////////////////////////////////////////////////////////
