태그 검색 기능 추가

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -36,7 +36,7 @@
 
   h2 {
     font-size: 1.7rem;
-    color: #d19a66;
+    color: rgba(42, 224, 217, 0.86);;
     border-bottom: 2px solid #3a3f4b;
     padding-bottom: 5px;
     margin-bottom: 5px;
