--- a/src/app/post/[slug]/page.module.scss
+++ b/src/app/post/[slug]/page.module.scss
@@ -48,7 +48,7 @@
 .markdown h3 {
   font-size: 1.3rem;
   font-weight: bold;
-  color: #d19a66;
+  color: rgba(42, 224, 217, 0.86);;
   padding-top: 1rem;
   padding-bottom: 1px;
   margin-bottom: -10px;
@@ -96,7 +96,7 @@
 .markdown blockquote {
   margin: 10px 0;
   padding: 8px 16px;
-  border-left: 3px solid #d19a66;
+  border-left: 3px solid rgba(42, 224, 217, 0.86);
   background: #2c2c2c;
   color: #bbb;
   font-style: italic;
