--- a/src/components/SideUtil/ScrollToTop/ScrollToTop.module.scss
+++ b/src/components/SideUtil/ScrollToTop/ScrollToTop.module.scss
@@ -1,7 +1,7 @@
 .scrollToTop {
   position: fixed;
   right: 25px;
-  bottom: 39.5vh !important;
+  bottom: 2vh !important;
   background: rgba(91, 91, 91, 0.7);
   color: white;
   border: none;
@@ -56,7 +56,7 @@
 ////////////////////////////////////////////////////////////////////////////////
 @media screen and (max-width: 768px) {
   .scrollToTop {
-    bottom: 34vh !important;
+    //bottom: 34vh !important;
     width: 30px;
     height: 30px;
   }
