태그 선택 최대 개수 제한 설정

--- a/src/components/common/Toast/Toast.module.scss
+++ b/src/components/common/Toast/Toast.module.scss
@@ -37,6 +37,7 @@
 ////////////////////////////////////////////////////////////////////////////////
 @media screen and (max-width: 768px) {
   .toast {
+    font-size: 0.6rem;
     padding: 10px 20px;
     bottom: 10px;
   }
