--- a/src/components/SideUtil/TableOfContents/TableOfContents.module.scss
+++ b/src/components/SideUtil/TableOfContents/TableOfContents.module.scss
@@ -14,8 +14,8 @@
 
 .tocWrapper {
   position: fixed;
-  top: 15vh;
-  right: 90px;
+  top: 3vh;
+  right: 80px;
   width: 450px;
   z-index: 100;
   opacity: 0.3;
@@ -84,13 +84,13 @@
 .tocButton {
   position: fixed;
   right: 25px;
-  top: 15vh;
+  top: 3vh;
   background: rgba(91, 91, 91, 0.7);
   color: white;
   border: none;
   padding: 0;
-  width: 60px;
-  height: 60px;
+  width: 50px;
+  height: 50px;
   font-size: 1.25rem;
   line-height: 1;
   border-radius: 10px;
@@ -104,7 +104,7 @@
   justify-content: center;
 
   &:hover {
-    background: rgba(255, 255, 255, 0.9);
+    background: rgb(126, 126, 126);
     color: black;
   }
 }
