--- a/src/app/post/[slug]/page.module.scss
+++ b/src/app/post/[slug]/page.module.scss
@@ -295,20 +295,20 @@
 }
 
 .markdown h1, .markdown h2, .markdown h3, .markdown h4, .markdown h5, .markdown h6 {
-  margin-top: 1.2rem;
-  margin-bottom: 0.5rem;
+  margin-top: 0;
+  margin-bottom: 0;
   font-weight: 700;
   color: var(--text);
   line-height: 1.3;
 }
 
 .markdown p {
-  margin: 0.5rem 0;
+  margin: 0 0;
   line-height: 1.3;
 }
 
 .markdown ul, .markdown ol {
-  margin: 0.5rem 0 0.5rem 1.2rem;
+  margin: 0 0 0 1rem;
   padding-left: 1rem;
   line-height: 1.3;
 }
@@ -341,7 +341,7 @@
   background: none;
   color: inherit;
   padding: 0;
-  font-size: 1em;
+  font-size: 0.75em;
 }
 
 .markdown blockquote {
@@ -383,7 +383,7 @@
 
 @media (max-width: 768px) {
   .container {
-    padding: 1.2rem 0.5rem 2rem 0.5rem;
+    padding: 1.5rem 0.5rem 2rem 0.5rem;
   }
   .title {
     font-size: 1.3rem;
@@ -393,17 +393,17 @@
     margin-bottom: 1.2rem;
   }
   .markdown {
-    font-size: 0.97rem;
+    font-size: 0.7rem;
     padding: 0 0.1rem;
     line-height: 1.2;
   }
   .markdown p, .markdown ul, .markdown ol, .markdown li {
-    line-height: 1.2;
+    line-height: 1;
   }
   .markdown pre {
     font-size: 0.8rem;
     padding: 0.7rem;
-    line-height: 1.1;
+    line-height: 1.2;
   }
   .markdown th, .markdown td {
     padding: 0.4rem 0.5rem;
