--- a/src/components/layout/Header.module.scss
+++ b/src/components/layout/Header.module.scss
@@ -55,4 +55,39 @@
     width: 20px;
     height: 20px;
   }
+}
+
+@media (max-width: 600px) {
+  .header {
+    position: fixed;
+    top: 0; left: 0; right: 0;
+    background: #fff;
+    z-index: 100;
+    border-bottom: 1px solid #eee;
+    height: 56px;
+    display: flex;
+    align-items: center;
+    padding: 0 16px;
+  }
+  .container {
+    padding: 0;
+  }
+  .logo {
+    font-size: 18px;
+    font-weight: 700;
+  }
+  .nav {
+    margin-left: auto;
+  }
+  .searchButton {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background: #f3f4f6;
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 8px;
+  }
 } 
