--- a/src/app/post/[slug]/page.module.scss
+++ b/src/app/post/[slug]/page.module.scss
@@ -127,42 +127,6 @@
 // tablet
 ////////////////////////////////////////////////////////////////////////////////
 @media screen and (max-width: 1024px) {
-  /* Markdown 스타일 */
-  .markdown {
-    padding: 10px 10px;
-    font-size: 0.9rem;
-    line-height: 1.8rem;
-  }
-
-  /* 제목 스타일 */
-  .markdown h1 {
-  }
-
-  .markdown h2 {
-  }
-
-  .markdown h3 {
-  }
-
-  /* 목록 스타일 */
-  .markdown ul {
-    padding-left: 20px;
-  }
-
-  .markdown ol {
-    padding-left: 30px;
-  }
-
-  /* 코드 블록 스타일 */
-  .markdown pre {
-    padding: 10px;
-    font-size: 0.9rem;
-    line-height: 1.25;
-  }
-
-  .markdown img {
-    max-width: 60%; /* 부모 컨테이너 기준으로 최대 크기 조정 */
-  }
 }
 
 ////////////////////////////////////////////////////////////////////////////////
@@ -285,7 +249,7 @@
 }
 
 .markdown {
-  font-size: 1.08rem;
+  font-size: 0.8rem;
   line-height: 1.3;
   color: var(--text);
   word-break: break-word;
@@ -295,7 +259,7 @@
 }
 
 .markdown h1, .markdown h2, .markdown h3, .markdown h4, .markdown h5, .markdown h6 {
-  margin-top: 0;
+  margin-top: 1rem;
   margin-bottom: 0;
   font-weight: 700;
   color: var(--text);
@@ -308,18 +272,18 @@
 }
 
 .markdown ul, .markdown ol {
-  margin: 0 0 0 1rem;
+  margin: -0.1rem 0.3rem;
   padding-left: 1rem;
   line-height: 1.3;
 }
 
 .markdown li {
-  margin: 0.1rem 0;
+  margin: -0.5rem 0.5rem -0.5rem;
   line-height: 1.3;
 }
 
 .markdown pre {
-  margin: 0.7rem 0;
+  margin: 0 0;
   padding: 0.7rem;
   background: #23272e;
   color: #eaeaea;
